@@ -1,3 +1,11 @@
+2022-02-19 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* device/lib/sm83/memcpy.s,
+	  device/lib/_memset.c:
+	  Switch to GBDK-2020's algorithm with partial loop unrolling.
+	* device/lib/_memmove.c:
+	  On sm83 call memcpy where possible.
+
 2022-02-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
 
 	* src/z80/gen.c:
